--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -8,25 +8,37 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUST_DEFAULT_TOOLCHAIN: 1.72-x86_64-unknown-linux-gnu
+  RUST_NIGHTLY_TOOLCHAIN: nightly-2023-01-03-x86_64-unknown-linux-gnu
 
 jobs:
   rust:
     runs-on: ubuntu-latest
     steps:
-      - name: Install Rust toolchain 1.72
-        run: rustup toolchain install 1.72-x86_64-unknown-linux-gnu
+      - name: Install Rust toolchain ${{ env.RUST_DEFAULT_TOOLCHAIN }}
+        run: rustup toolchain install $RUST_DEFAULT_TOOLCHAIN
       - name: Install nightly
-        run: rustup toolchain install nightly-2023-01-03-x86_64-unknown-linux-gnu
+        run: rustup toolchain install $RUST_NIGHTLY_TOOLCHAIN
       - name: Install riscv target
-        run: rustup target add riscv32imac-unknown-none-elf --toolchain nightly-2023-01-03-x86_64-unknown-linux-gnu
+        run: rustup target add riscv32imac-unknown-none-elf --toolchain $RUST_NIGHTLY_TOOLCHAIN
       - name: Install stdlib
-        run: rustup component add rust-src --toolchain nightly-2023-01-03-x86_64-unknown-linux-gnu
+        run: rustup component add rust-src --toolchain $RUST_NIGHTLY_TOOLCHAIN
+      - name: Create cache key
+        id: rustc-version
+        run: |
+          DATE=$(rustc +${{ env.TOOLCHAIN }} --version --verbose | sed -ne 's/^commit-date: \(20[0-9][0-9]\)-\([01][0-9]\)-\([0-3][0-9]\)$/\1\2\3/p')
+          HASH=$(rustc +${{ env.TOOLCHAIN }} --version --verbose | sed -ne 's/^commit-hash: //p')
+          echo "cachekey=$(echo $DATE$HASH | head -c12)" >> $GITHUB_OUTPUT
+        shell: bash
       - uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: "v0-rust-${{ steps.rustc-version.outputs.cachekey }}"
+          cache-on-failure: true
 
   pilcom:
     runs-on: ubuntu-latest
     steps:
-      - name: ⚡ Cache nodejs
+      - name: ⚡ Cache Pilcom
         id: cache-pilcom
         uses: actions/cache@v3
         with:
@@ -50,6 +62,9 @@ jobs:
         with:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: "v0-rust-${{ steps.rustc-version.outputs.cachekey }}"
+          cache-on-failure: true
       - name: Build
         run: cargo build --bins --tests --benches --all --all-features --profile pr-tests
 
@@ -61,6 +76,14 @@ jobs:
         with:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
+        with:
+          save-if: false
+      - name: Restore pilcom cache
+        uses: actions/cache/restore@v3
+        with:
+          path: |
+            ~/pilcom/node_modules
+          key: ${{ runner.os }}-pilcom-node-modules
       - name: Run default tests
         run: cargo test --all --all-features --profile pr-tests --verbose
         env:
@@ -74,6 +97,14 @@ jobs:
         with:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
+        with:
+          save-if: false
+      - name: Restore pilcom cache
+        uses: actions/cache/restore@v3
+        with:
+          path: |
+            ~/pilcom/node_modules
+          key: ${{ runner.os }}-pilcom-node-modules
       - name: Run slow tests
         # Number threads is set to 1 because the runner does not have enough memory for more.
         run: cargo test --all --all-features --profile pr-tests --verbose -- --ignored --nocapture --test-threads=1 --exact test_keccak test_vec_median instruction_tests::addi test_many_chunks
@@ -103,11 +134,11 @@ jobs:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
       - name: Install Clippy
-        run: rustup component add clippy --toolchain 1.72-x86_64-unknown-linux-gnu
+        run: rustup component add clippy --toolchain $RUST_DEFAULT_TOOLCHAIN
       - name: Lint
-        run: cargo clippy --all --all-targets --all-features
-        env:
-          RUSTFLAGS: -Dwarnings
+        run: cargo clippy --all --all-targets --all-features -- -D warnings
+        #env:
+        #  RUSTFLAGS: -Dwarnings
 
   fmt:
     runs-on: ubuntu-latest
@@ -118,6 +149,6 @@ jobs:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
       - name: Install rustfmt
-        run: rustup component add rustfmt --toolchain 1.72-x86_64-unknown-linux-gnu
+        run: rustup component add rustfmt --toolchain $RUST_DEFAULT_TOOLCHAIN
       - name: Format
         run: cargo fmt --all --check --verbose
