--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -84,7 +84,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: |
-            ~/pilcom/node_modules
+            $GITHUB_WORKSPACE/pilcom/node_modules
           key: ${{ runner.os }}-pilcom-node-modules
       - name: Run default tests
         run: cargo test --all --all-features --profile pr-tests --verbose
@@ -105,7 +105,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: |
-            ~/pilcom/node_modules
+            $GITHUB_WORKSPACE/pilcom/node_modules
           key: ${{ runner.os }}-pilcom-node-modules
       - name: Run slow tests
         # Number threads is set to 1 because the runner does not have enough memory for more.
