--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -34,7 +34,7 @@ jobs:
         shell: bash
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "v0-rust-${{ env.RUSTC_DEFAULT_TOOLCHAIN }}"
+          prefix-key: "v0-rust-${{ env.RUST_DEFAULT_TOOLCHAIN }}"
           shared-key: "${{ steps.rustc-version.outputs.cachekey }}"
           cache-on-failure: true
 
@@ -66,7 +66,7 @@ jobs:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "v0-rust-${{ env.RUSTC_DEFAULT_TOOLCHAIN }}"
+          prefix-key: "v0-rust-${{ env.RUST_DEFAULT_TOOLCHAIN }}"
           shared-key: "${{ needs.setup-rust.outputs.cache-shared-key }}"
           cache-on-failure: true
       - name: Build
@@ -81,7 +81,7 @@ jobs:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "v0-rust-${{ env.RUSTC_DEFAULT_TOOLCHAIN }}"
+          prefix-key: "v0-rust-${{ env.RUST_DEFAULT_TOOLCHAIN }}"
           shared-key: "${{ needs.setup-rust.outputs.cache-shared-key }}"
           save-if: false
       - name: Restore pilcom cache
