--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -46,8 +46,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ${{ github.workspace }}/pilcom/node_modules
-          key: ${{ runner.os }}-pilcom-node-modules
+            ${{ github.workspace }}/pilcom
+          key: ${{ runner.os }}-pilcom-node-cache
       - name: Install pilcom
         if: steps.cache-pilcom.outputs.cache-hit != 'true'
         run: |
@@ -88,8 +88,8 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: |
-            ${{ github.workspace }}/pilcom/node_modules
-          key: ${{ runner.os }}-pilcom-node-modules
+            ${{ github.workspace }}/pilcom
+          key: ${{ runner.os }}-pilcom-node-cache
       - name: Run default tests
         run: cargo test --all --all-features --profile pr-tests --verbose
         env:
@@ -109,8 +109,8 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: |
-            ${{ github.workspace }}/pilcom/node_modules
-          key: ${{ runner.os }}-pilcom-node-modules
+            ${{ github.workspace }}/pilcom
+          key: ${{ runner.os }}-pilcom-node-cache
       - name: Run slow tests
         # Number threads is set to 1 because the runner does not have enough memory for more.
         run: cargo test --all --all-features --profile pr-tests --verbose -- --ignored --nocapture --test-threads=1 --exact test_keccak test_vec_median instruction_tests::addi test_many_chunks
