--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -10,12 +10,13 @@ env:
   CARGO_TERM_COLOR: always
   RUST_DEFAULT_TOOLCHAIN: "1.72-x86_64-unknown-linux-gnu"
   RUST_NIGHTLY_TOOLCHAIN: "nightly-2023-01-03-x86_64-unknown-linux-gnu"
-
+  PILCOM_CACHE_KEY: v0-${{ runner.os }}-pilcom-node-cache
+4
 jobs:
   setup-rust:
     runs-on: ubuntu-latest
     outputs:
-      cache-shared-key: ${{ steps.rustc-version.outputs.cachekey }}
+      rust-cache-key: ${{ steps.rustc-version.outputs.cachekey }}
     steps:
       - name: Install Rust toolchain ${{ env.RUST_DEFAULT_TOOLCHAIN }}
         run: rustup toolchain install $RUST_DEFAULT_TOOLCHAIN
@@ -34,7 +35,6 @@ jobs:
         shell: bash
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "v0-rust-${{ env.RUST_DEFAULT_TOOLCHAIN }}"
           shared-key: "${{ steps.rustc-version.outputs.cachekey }}"
           cache-on-failure: true
 
@@ -47,7 +47,7 @@ jobs:
         with:
           path: |
             ${{ github.workspace }}/pilcom
-          key: ${{ runner.os }}-pilcom-node-cache
+          key: ${{ env.PILCOM_CACHE_KEY }}
       - name: Install pilcom
         if: steps.cache-pilcom.outputs.cache-hit != 'true'
         run: |
@@ -60,15 +60,20 @@ jobs:
     needs:
       - setup-rust
       - pilcom
+    outputs:
+      build-cache-key: ${{ steps.build-cache.outputs.cachekey }}
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "v0-rust-${{ env.RUST_DEFAULT_TOOLCHAIN }}"
-          shared-key: "${{ needs.setup-rust.outputs.cache-shared-key }}"
+          shared-key: "${{ needs.setup-rust.outputs.rust-cache-key }}"
           cache-on-failure: true
+      - name: Update cache key
+        id: build-cache
+        run: |
+          echo "cachekey=$(echo ${{ needs.setup-rust.outputs.rust-cache-key }})" >> $GITHUB_OUTPUT
       - name: Build
         run: cargo build --bins --tests --benches --all --all-features --profile pr-tests
 
@@ -81,15 +86,14 @@ jobs:
           submodules: recursive
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "v0-rust-${{ env.RUST_DEFAULT_TOOLCHAIN }}"
-          shared-key: "${{ needs.setup-rust.outputs.cache-shared-key }}"
+          shared-key: "${{ needs.build.outputs.build-cache-key }}"
           save-if: false
       - name: Restore pilcom cache
         uses: actions/cache/restore@v3
         with:
           path: |
             ${{ github.workspace }}/pilcom
-          key: ${{ runner.os }}-pilcom-node-cache
+          key: ${{ env.PILCOM_CACHE_KEY }}
       - name: Run default tests
         run: cargo test --all --all-features --profile pr-tests --verbose
         env:
@@ -110,7 +114,7 @@ jobs:
         with:
           path: |
             ${{ github.workspace }}/pilcom
-          key: ${{ runner.os }}-pilcom-node-cache
+          key: ${{ env.PILCOM_CACHE_KEY }}
       - name: Run slow tests
         # Number threads is set to 1 because the runner does not have enough memory for more.
         run: cargo test --all --all-features --profile pr-tests --verbose -- --ignored --nocapture --test-threads=1 --exact test_keccak test_vec_median instruction_tests::addi test_many_chunks
