--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -93,10 +93,19 @@ jobs:
           path: |
             ${{ github.workspace }}/pilcom
           key: v0-${{ runner.os }}-pilcom-node-cache
-      - name: Run default tests
-        run: cargo test --all --all-features --profile pr-tests --verbose
+      - name: Determine which tests to run
+        id: test-to-run
+        run: |
+          echo "TEST_TO_RUN=$(cargo test --all --all-features --profile pr-tests -- --list 2> /dev/null \
+          | grep ': test' \
+          | sed -e 's/: test//' \
+          | circleci tests split --split-by=timings)" >> $GITHUB_OUTPUT
+      - name: Run tests
+        run: cargo test --no-fail-fast --all --all-features --profile pr-tests --verbose -- --exact $(echo $TEST_TO_RUN)
         env:
           PILCOM: ${{ github.workspace }}/pilcom/
+      - name: Check benches compile without running them
+        run: cargo bench --all --all-features --profile pr-tests --no-run
 
   slow-test:
     runs-on: ubuntu-latest
@@ -116,7 +125,7 @@ jobs:
           key: v0-${{ runner.os }}-pilcom-node-cache
       - name: Run slow tests
         # Number threads is set to 1 because the runner does not have enough memory for more.
-        run: cargo test --all --all-features --profile pr-tests --verbose -- --ignored --nocapture --test-threads=1 --exact test_keccak test_vec_median instruction_tests::addi test_many_chunks
+        run: cargo test --all --all-features --profile pr-tests --verbose -- --ignored --nocapture --test-threads=2 --exact test_keccak test_vec_median instruction_tests::addi test_many_chunks
         env:
           PILCOM: ${{ github.workspace }}/pilcom/
 
